[package]
name = "netstatsd"
version = "0.2.0"
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64 = "0.13.0"
ed25519-dalek = { version = "2.1.1" }
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2.8"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
holochain_types = "=0.4.0-dev.11"
holochain_conductor_api = "=0.4.0-dev.11"
# This is only here to force dependencies to pull in a compatible version
holochain_zome_types = "=0.4.0-dev.9"
url = "2.2"
hpos-config-core = { git = "https://github.com/holo-host/hpos-config.git", rev = "86411bdaabe7061a4b150d36c062fddc2c6c74cc" }
hpos-config-seed-bundle-explorer = { git = "https://github.com/holo-host/hpos-config.git", rev = "86411bdaabe7061a4b150d36c062fddc2c6c74cc" }
hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "256a8c41623baf2fdb5b8241b85b2ba02d1a3f84" }
