[package]
name = "netstatsd"
version = "0.2.0"
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64 = "0.13.0"
ed25519-dalek = { version = "2.1.1" }
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2.8"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
holochain_types = "=0.4.0-dev.18"
holochain_conductor_api = "=0.4.0-dev.18"
url = "2.2"
hpos-config-core = { git = "https://github.com/holo-host/hpos-config.git", rev = "77d740c83a02e322e670e360eb450076b593b328" }
hpos-config-seed-bundle-explorer = { git = "https://github.com/holo-host/hpos-config.git", rev = "77d740c83a02e322e670e360eb450076b593b328" }
hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "b128ddf45a80954917dd3b8713b7f2ae666e3613" }
